--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="barometric-site-verification" content="b8b53f28-b30d-48bd-8dc2-f9bc79413603" /><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="manifest.json"><link rel="shortcut icon" href="favicon.ico"><title>Peter's Blog</title><link href="/pariosa.github.io/static/css/main.cab48a18.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/pariosa.github.io/static/js/main.1fdd8d9d.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="barometric-site-verification" content="b8b53f28-b30d-48bd-8dc2-f9bc79413603" /><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="manifest.json"><link rel="shortcut icon" href="favicon.ico"><title>Peter's Blog</title><link href="/pariosa.github.io/static/css/main.cab48a18.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/pariosa.github.io/static/js/main.1fdd8d9d.js"></script>
+<!-- BAROMETRIC FIVT -->
+<script type="text/javascript">
+ (function(){ var ord = Math.random() * 10000000000;var elem = document.createElement("script");
+ elem.src = (document.location.protocol == "https:" ? "https://" : "http://") + "trkn.us/info/request.js?sid=6cd0a02e-444f-489f-942c-a4fd789b90f2&ord="+ord;
+ elem.async = true;elem.type = "text/javascript";var scpt = document.getElementsByTagName("script")[0];
+ scpt.parentNode.insertBefore(elem, scpt); })();
+</script>
+<noscript><div style="display:none;"><img src="//trkn.us/info/?sid=6cd0a02e-444f-489f-942c-a4fd789b90f2" border="0" height="1" width="1" alt="Barometric" /></div></noscript>
+<!-- END BAROMETRIC FIVT -->
+</body></html>
